Attempt fix for Safari browser h1 cutoff

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 @font-face {
     font-family: waltograph;
-    src: url(../fonts/waltograph42.otf);
+    src: url(pvieira04.github.io/assets/media/fonts/waltograph42.otf);
     font-display: swap;
 }
 
